--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,15 @@ jobs:
         path: ~/.dotnet/tools
         key: ${{ runner.os }}-sonarscanner-${{ hashFiles('**/global.json') }}
 
+    - name: Print Environment Variables
+      run: |
+        echo "SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}"
+        echo "SONAR_HOST_URL=${{ secrets.SONAR_HOST_URL }}"
+
+    - name: Check SonarQube Server
+      run: |
+        curl -v "${{ secrets.SONAR_HOST_URL }}/api/server/version"
+
     - name: Begin SonarQube analysis
       run: dotnet-sonarscanner begin /k:"elmin387_HealthCare-project-API_d931c531-fcd6-4da0-98da-7d9bc4f3cb5b" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
 
@@ -34,9 +43,3 @@ jobs:
 
     - name: End SonarQube analysis
       run: dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-
-    - name: Print Environment Variables
-      run: |
-        echo "SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}"
-        echo "SONAR_HOST_URL=${{ secrets.SONAR_HOST_URL }}"
-
